# ralphtool

./: .gitignore  Cargo.toml  openspec.md
.claude/commands/opsx/: archive.md
.claude/skills/openspec-archive-change/: SKILL.md
docs/: openspec-ralph-concepts.md  openspec-ralph-implementation.md  openspec-ralph-verification.md
openspec/changes/add-learnings-md/: tasks.md
openspec/changes/fix-completion-screen-bugs/: proposal.md  tasks.md
openspec/specs/agent-cli/: spec.md
openspec/specs/agent-context/: spec.md
openspec/specs/agent-progress/: spec.md
openspec/specs/agent-prompt/: spec.md
openspec/specs/agent-session/: spec.md
openspec/specs/agent-streaming/: spec.md
openspec/specs/agent-tasks/: spec.md
openspec/specs/agent-verify/: spec.md
openspec/specs/app-scaffold/: spec.md
openspec/specs/async-command-execution/: spec.md
openspec/specs/change-selection-screen/: spec.md
openspec/specs/checkpoint/: spec.md
openspec/specs/checkpoint-completion/: spec.md
src/: app.rs  async_cmd.rs  error.rs  event.rs  main.rs  ui.rs
src/agent/: claude.rs  cli.rs  context.rs  mod.rs  progress.rs  prompt.rs  session.rs  tasks.rs  verify.rs
src/checkpoint/: mod.rs
src/ralph/: mod.rs  openspec.rs  traits.rs  types.rs
src/ralph_loop/: learnings.rs  mod.rs  orchestrator.rs
src/session/: cli.rs  instructions.rs  mod.rs  scoped.rs  state.rs
src/spec/: mod.rs  openspec.rs  prompt.rs  traits.rs  types.rs
src/ui/: completion_screen.rs  loop_screen.rs  mod.rs  preview.rs  result_screen.rs  selection.rs
tests/: agent_integration.rs
(+229 files in other folders)
