[package]
name = "ralphtool"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
fs2 = "0.4"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
