[package]
name = "ralphtool"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
